Had to fix a spacing problem in the hehader

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -61,6 +61,8 @@ h1 {
 
 .nav-item:hover{
     color: #131518;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 @media only screen and (max-width: 450px) {
